# fastnum

./: CMakeLists.txt  README.md
examples/: demo_running_stats.cpp
include/fastnum/: online_covariance.hpp  online_standard_scaler.hpp  running_stats.hpp
tests/: test_online_covariance.cpp  test_online_standard_scaler.cpp  test_running_stats.cpp
